<resources>
    <string name="app_name">ContactBook</string>
    <string name="start_fragment">Starting string</string>
    <string name="login_fragment">Login</string>
    <string name="register_fragment">Registration</string>
    <string name="contacts_fragment">Contacts</string>
    <string name="contact_detail_fragment">Contact</string>
    <string name="add_contact_fragment">New contact</string>
    <string name="edit_contact_fragment">Edit contact</string>
    <string name="main_fragment">Hello user</string>
    <string name="register_name_hint">Name</string>
    <string name="register_name_helper_text">what is you name</string>
    <string name="register_lastname_hint">Lastname</string>
    <string name="register_lastname_helper_text">what is your last name</string>
    <string name="register_email_hint">Email</string>
    <string name="register_email_helper_text">share us with your email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_password_helper_text">enter your secret code</string>
    <string name="register_confirm_password_helper_text">repeat your secret code</string>
    <string name="register_register_confirm_button_text">Register</string>
    <string name="register_confirm_password_hint">Confirm password</string>
    <string name="login_login_text">Login</string>
    <string name="log_out">Log out</string>
    <string name="welcome">Welcome</string>
    <string name="instagram">Instagram</string>
    <string name="phoneNumber">Phone number</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string-array name="sex_array">
        <item name="male">Male</item>
        <item name="female">Female</item>
        <item name="others">Others</item>
    </string-array>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="add_contact">Add contact</string>
    <string name="settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="addExternalContact">Add External Contact</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="change_avatar">Change avatar</string>
    <string name="contact_name">Contact name</string>
    <string name="user_profile">User Profile</string>
    <string name="emailError">enter correct email</string>
    <string name="passwordError">fill password field</string>
    <string name="nouser">incorrect password or email</string>
    <string name="usernameError">enter correct name</string>
    <string name="userLastNameError">enter correct last name</string>
    <string name="confrimPasswordError">repeat your password</string>
    <string name="ContactExistsToast">Contact is already exists</string>
    <string name="addExternalContactCanceledToast">Canceled</string>
    <string name="userAlreadyToast">User with such email is already exists</string>
    <string name="positiveAnswYes">Yes</string>
    <string name="negativeAnswNO">No</string>
    <string name="deleteEverything">Delete everything?</string>
    <string name="deletingContactsMessage">Are you sure you want  to delete all your contacts?</string>
    <string name="contactNameError">Enter correct name</string>
    <string name="contactPhoneNumberError">Enter correct phone number</string>
    <string name="deleteQstnContact">Are you sure you want to delete</string>
    <string name="chooseImage">Choose Image</string>
    <string name="deny">Deny</string>
    <string name="denied">Denied...</string>
    <string name="makeImageNow">Make image now</string>
</resources>