<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_main_graph"
    app:startDestination="@id/userProfileFragment">

    <fragment
        android:id="@+id/contactsFragment"
        android:name="com.example.contactbook.ui.views.mainscreens.contacts.ContactsFragment"
<<<<<<< Updated upstream
        android:label="Contacts" >
=======
        android:label="@string/contacts_fragment"
        tools:layout="@layout/fragment_contacts">
>>>>>>> Stashed changes
        <action
            android:id="@+id/action_contactsFragment_to_addContactFragment"
            app:destination="@id/addContactFragment" />
    </fragment>
    <fragment
        android:id="@+id/userProfileFragment"
        android:name="com.example.contactbook.ui.views.mainscreens.UserProfileFragment"
<<<<<<< Updated upstream
        android:label="User Profile" />
    <fragment
        android:id="@+id/addContactFragment"
        android:name="com.example.contactbook.ui.views.mainscreens.contacts.AddContactFragment"
        android:label="AddContactFragment" >
=======
        android:label="@string/user_profile"
        tools:layout="@layout/fragment_userprofile"/>
    <fragment
        android:id="@+id/addContactFragment"
        android:name="com.example.contactbook.ui.views.mainscreens.contacts.add.AddContactFragment"
        android:label="@string/add_contact_fragment"
        tools:layout="@layout/fragment_add_contact">
>>>>>>> Stashed changes
        <action
            android:id="@+id/action_addContactFragment_to_contactsFragment"
            app:destination="@id/contactsFragment" />
    </fragment>
    <fragment
        android:id="@+id/editContactFragment"
<<<<<<< Updated upstream
        android:name="com.example.contactbook.ui.views.mainscreens.contacts.EditContactFragment"
        android:label="EditContactFragment" >
=======
        android:name="com.example.contactbook.ui.views.mainscreens.contacts.edit.EditContactFragment"
        android:label="@string/edit_contact_fragment"
        tools:layout="@layout/fragment_edit_contact">
        <argument
            android:name="transfer_contact_id"
            app:argType="string"
            android:defaultValue='""' />
        <action
            android:id="@+id/action_editContactFragment_to_contactsFragment"
            app:destination="@id/contactsFragment" />
>>>>>>> Stashed changes
        <action
            android:id="@+id/action_editContactFragment_to_contactDetailFragment"
            app:destination="@id/contactDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/contactDetailFragment"
<<<<<<< Updated upstream
        android:name="com.example.contactbook.ui.views.mainscreens.contacts.ContactDetailFragment"
        android:label="ContactDetailFragment" >
=======
        android:name="com.example.contactbook.ui.views.mainscreens.contacts.detail.ContactDetailFragment"
        android:label="@string/contact_detail_fragment"
        tools:layout="@layout/fragment_contact_detail">
>>>>>>> Stashed changes
        <action
            android:id="@+id/action_contactDetailFragment_to_editContactFragment"
            app:destination="@id/editContactFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.contactbook.ui.views.mainscreens.settings.SettingsFragment"
<<<<<<< Updated upstream
        android:label="Settings" />
=======
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"/>
>>>>>>> Stashed changes
</navigation>