<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/login"
                style="?android:attr/buttonBarButtonStyle"

                android:layout_width="330dp"
                android:layout_height="50dp"

                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"

                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/main"
                android:text="@string/login_login_text"
                android:textColor="@android:color/white"

                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.512"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordError"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"

                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:theme="@style/MyTextInputLayout_overlay"
                app:boxStrokeWidth="2dp"
                app:counterTextColor="@color/grey"

                app:helperText="@string/register_password_helper_text"
                app:helperTextTextColor="@color/grey"
                app:layout_constraintBottom_toTopOf="@+id/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_marginTop="10dp"
                    android:hint="@string/register_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailError"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:theme="@style/MyTextInputLayout_overlay"
                app:boxStrokeWidth="2dp"

                app:counterTextColor="@color/grey"
                app:errorEnabled="true"

                app:helperText="@string/register_email_helper_text"
                app:helperTextTextColor="@color/grey"
                app:layout_constraintBottom_toTopOf="@+id/passwordError"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:startIconDrawable="@drawable/ic_contact_mail"
                app:startIconTint="@color/grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:hint="@string/register_email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_fragment_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="50dp"

                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"

                android:layout_marginBottom="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/main"

                android:text="@string/login_fragment"

                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/emailError"
                app:layout_constraintEnd_toStartOf="@+id/register_fragment_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/main"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/register_fragment_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="50dp"

                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"

                android:layout_marginEnd="40dp"

                android:layout_marginBottom="50dp"
                android:layout_weight="1"
                android:text="@string/register_fragment"

                android:textColor="@color/main"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/emailError"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/login_fragment_button"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/main"
                app:strokeWidth="2dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>