<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
<<<<<<< Updated upstream
    android:layout_height="match_parent">
=======
    android:layout_height="match_parent"
    android:background="@color/background">
>>>>>>> Stashed changes

    <ImageView
        android:id="@+id/avatarIV"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074"
        app:srcCompat="@drawable/ic_account_circle" />

    <TextView
        android:id="@+id/contactName_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Contact name"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarIV" />

    <TextView
        android:id="@+id/phoneNumber_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="phone number"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactName_TV" />

<<<<<<< Updated upstream
    <TextView
        android:id="@+id/instagram_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="instagram"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber_TV" />

    <TextView
        android:id="@+id/gender_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="gender"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instagram_TV" />

    <ImageButton
        android:id="@+id/edit_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065"
        app:srcCompat="@drawable/ic_edit" />

=======
            <TextView
                android:id="@+id/contactName_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rounded_tv"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="10dp"
                android:text="@string/contact_name"
                android:textColor="@color/black"
                android:textSize="24dp"
                app:layout_constraintTop_toBottomOf="@+id/avatarIV" />

            <TextView
                android:id="@+id/phoneNumber_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_rounded_tv"
                android:paddingHorizontal="10dp"
                android:text="@string/phoneNumber"
                android:textColor="@color/black"
                android:textSize="24dp"
                app:layout_constraintTop_toBottomOf="@+id/contactName_TV" />

            <TextView
                android:id="@+id/instagram_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_rounded_tv"
                android:paddingHorizontal="10dp"
                android:text="@string/instagram"
                android:textColor="@color/black"
                android:textSize="24dp"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumber_TV" />

            <TextView
                android:id="@+id/gender_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/bg_rounded_tv"
                android:paddingHorizontal="10dp"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="24dp"
                app:layout_constraintTop_toBottomOf="@+id/instagram_TV" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
>>>>>>> Stashed changes
</androidx.constraintlayout.widget.ConstraintLayout>
